package maidsafe.nfs.protobuf;
option optimize_for = LITE_RUNTIME;

message HandledRequest {
  required bytes message_id = 1;
  required bytes reply = 2;
}

message HandledRequests {
  required bytes name = 1;
  repeated HandledRequest request = 2;
}
